--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body{
     background: linear-gradient(to bottom right, violet,
     rgb(156, 70, 218),rgb(194, 194, 235),rgb(45, 178, 45),
     rgb(217, 217, 33),rgb(228, 164, 45), rgb(222, 58, 58));
+    background-repeat:no-repeat;
 }
 .container{
     height: 70vh;
