--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
     rgb(156, 70, 218),rgb(194, 194, 235),rgb(45, 178, 45),
     rgb(217, 217, 33),rgb(228, 164, 45), rgb(222, 58, 58));
     background-repeat:no-repeat;
+    height:100vh;
 }
 .container{
     height: 70vh;
